Fixed two bugs: 1 cypress test bug, 2 button align bug. #fix #[dzh80]

--- a/portfolio/src/main/resources/static/css/evidencePage.css
+++ b/portfolio/src/main/resources/static/css/evidencePage.css
@@ -304,7 +304,6 @@
     border: none;
     color: black;
     background: #ffffff;
-    float:left;
 }
 
 #deleteLinkedUser:hover{
@@ -314,10 +313,8 @@
     border: none;
     background: #175fbd;
     color: #ffffff;
-    float:left;
 }
 
-#linkedUser{
-    float:left;
+#linkedUserElement{
+    display : flex;
 }
-
